--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = miniplayer-kenzie
+name = miniplayer
 version = 1.1.2
 description = An mpd client with album art and basic functionality.
 long_description = file: README.md
