Added auto_close and album_art_only to the example config

--- a/config.example
+++ b/config.example
@@ -4,6 +4,8 @@ font_width = 11
 font_height = 24
 image_method = pixcat
 volume_step = 5
+auto_close = false
+album_art_only = false
 
 [mpd]
 host = localhost
