Updated the example config

--- a/config.example
+++ b/config.example
@@ -29,3 +29,13 @@ port   = 6600
 # up    = select_up
 # down  = select_down
 # enter = select
+
+# [theme]
+# # If a color is set to "auto", it will automatically pick the color based on the album art
+# accent_color = auto
+# bar_color = auto
+# time_color = white
+#
+# # The progress bar. Only one character allowed for body and head
+# bar_body = -
+# bar_head = >
