--- a/setup.cfg
+++ b/setup.cfg
@@ -1,12 +1,12 @@
 [metadata]
 name = miniplayer
-version = 1.4.0
+version = 1.5.0
 description = An mpd client with album art and basic functionality.
 long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://github.com/GuardKenzie/miniplayer
-author = Tristan Ferrua
-author_email = tristanferrua@gmail.com
+author = Erica Ferrua
+author_email = tolvukisa@gmail.com
 classifiers = 
     Programming Language :: Python :: 3
     License :: OSI Approved :: MIT License
@@ -24,4 +24,5 @@ install_requires =
     pillow
     requests
     ueberzug
+    colorthief
 
