Fixed broken setup

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = miniplayer
-version = 1.7.0
+version = 1.7.1
 description = An mpd client with album art and basic functionality.
 long_description = file: README.md
 long_description_content_type = text/markdown
@@ -16,6 +16,9 @@ classifiers =
 [options]
 scripts = 
     bin/miniplayer
+
+packages=
+    miniplayer
 
 install_requires =
     python-mpd2
