--- a/setup.cfg
+++ b/setup.cfg
@@ -22,10 +22,8 @@ packages=
 
 install_requires =
     python-mpd2
-    ffmpeg-python
-    pixcat
     pillow
     requests
-    ueberzug
     colorthief
+    chafa.py
 
